[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TestScene.gd" type="Script" id=2]
[ext_resource path="res://addons/BackgroundWorker/BackgroundWorker.gd" type="Script" id=3]

[node name="TestScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 65, 66 )
texture = ExtResource( 1 )

[node name="Loading" type="VBoxContainer" parent="."]
visible = false
margin_left = 156.0
margin_top = 22.0
margin_right = 379.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Loading"]
margin_right = 223.0
margin_bottom = 14.0
text = "Loading..."

[node name="ProgressBar" type="ProgressBar" parent="Loading"]
margin_top = 18.0
margin_right = 223.0
margin_bottom = 32.0

[node name="BackgroundWorker" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 34.0
margin_top = 136.0
margin_right = 214.0
margin_bottom = 218.0
text = "Do some WORK!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="busy" from="BackgroundWorker" to="." method="_on_BackgroundWorker_busy"]
[connection signal="free" from="BackgroundWorker" to="." method="_on_BackgroundWorker_free"]
[connection signal="progress" from="BackgroundWorker" to="." method="_on_BackgroundWorker_progress"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
